[gd_scene load_steps=4 format=3 uid="uid://cacymv3yxmlvm"]

[ext_resource type="Script" path="res://Scripts/Menus/Play_Menu/save_file.gd" id="1_686pm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8iwb4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twkqy"]

[node name="Save_File" type="Control"]
editor_description = "Displays A Save File, Typically Used For Saving Or Loading Save File Data"
custom_minimum_size = Vector2(646, 164)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_686pm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -82.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_8iwb4")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/Label"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_twkqy")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Save_File_Name_Here"
vertical_alignment = 2

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_twkqy")

[node name="Load" type="Button" parent="HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Load"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_twkqy")

[node name="Delete" type="Button" parent="HBoxContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Delete"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_twkqy")

[node name="Data" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/Data"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_twkqy")

[node name="Date_Created" type="Label" parent="HBoxContainer/VBoxContainer/Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0.577009, 0.577008, 0.577008, 1)
text = "Date Created:"

[node name="Last_Played" type="Label" parent="HBoxContainer/VBoxContainer/Data"]
layout_mode = 2
theme_override_colors/font_color = Color(0.576471, 0.576471, 0.576471, 1)
text = "Last Played:"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
theme_override_styles/separator = SubResource("StyleBoxEmpty_8iwb4")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Buttons/Delete" to="." method="_on_delete_pressed"]
